# GameProject-2018

./: .gitignore  CMakeLists.txt  ProjectSane.files  ProjectSane.includes  README.md  buildStructure  main.cpp  makefile
engine/: game.cpp  game.h
engine/buffers/: framebuffer.cpp  framebuffer.h  indexbuffer.cpp  indexbuffer.h  indices.cpp  indices.h  vertex.h  vertexbuffer.cpp  vertexbuffer.h
engine/buffers/vertexbuffers/: vb_basic.h  vb_transform.h
engine/camera/: camera.cpp  camera.h
engine/contexts/: context.cpp  context.h
engine/drawable/: batchrenderer.cpp  batchrenderer.h  drawable.h  drawablebasics.h  drawableobject.cpp  drawableobject.h  layer.cpp  layer.h  model.cpp  model.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
engine/drawable/renderers/: batch.cpp  batch.h  instanced.cpp  instanced.h  layer.cpp
engine/ecs/: component.cpp  component.h  ecsmanager.cpp  ecsmanager.h  entity.h  icomponent.cpp  icomponent.h  ientity.h  isystem.h  system.h
engine/ecs/components/: cameracomponent.h  collidable.h  component.h  texturecomponent.h  vertex.h
engine/ecs/entities/: drawableentity.cpp  drawableentity.h  entity.cpp  entity.h  shadowentity.cpp  simple.h
engine/ecs/systems/: renderer.cpp  renderer.h  rendering.h  renderingsystem.cpp  renderingsystem.h  shadowsystem.cpp  system.cpp  system.h
engine/lights/: point.cpp  spot.cpp
engine/managers/: StateManager.cpp  StateManager.h  WindowManager.cpp  WindowManager.h  contextmanager.cpp  contextmanager.h  memorymanager.cpp  shadermanager.cpp  shadermanager.h  soundmanager.cpp  texturemanager.cpp  texturemanager.h  windowmanager.cpp  windowmanager.h
engine/renderer/: batchrenderer.cpp  batchrenderer.h
engine/shaders/: shader.cpp  shader.h
engine/states/: State.cpp  State.h
engine/textures/: texture.cpp  texture.h
engine/utils/: fileloader.cpp  fileloader.h  keyhandler.cpp  keyhandler.h  mousehandler.cpp  mousehandler.h  timer.cpp  timer.h
libs/glad/: current
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
libs/glfw/: current
libs/glfw/glfw-3.2.1/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/glfw-3.2.1/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
libs/glfw/glfw-3.2.1/src/: Makefile  cmake_install.cmake
libs/glfw/glfw-3.2.1/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
libs/glm/: current
ps/: gamebase.cpp
ps/drawable/: rectangle.cpp
ps/drawable/renderers/: batch.cpp
ps/ecs/: ecsmanager.cpp  ecsmanager.h  icomponent.h
ps/ecs/systems/: inputcontrolsystem.cpp  interactionsystem.cpp  movementsystem.cpp  renderingsystem.cpp  shadowsystem.cpp
ps/managers/: contextmanager.cpp  soundmanager.cpp  soundmanager.h  texturemanager.cpp  windowmanager.cpp
ps/utils/: timer.cpp
resources/: basic.fs  basic.vs
resources/shaders/: basic.fs  basic.vs  shadow.fs  shadow.vs
